# openshift-ldap-operator

./: .gitignore  pyproject.toml
openshift_ldap_operator/: openshift_client.py
openshift_ldap_operator/controller/: __init__.py  config.py
openshift_ldap_operator/resources/: __init__.py  admin_group.py  base.py  cluster_admin_group.py  config.py  group.py
